--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="any_other_notes">Any Notes?</string>
     <string name="save">SAVE</string>
     <string name="date">date</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="list">List</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
